Sometime Maven build runs out of PermGen space.